--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 upload_port = COM3
 upload_speed = 19200
 upload_protocol = avrisp
+upload_flags = -e
 
 board_build.mcu = atmega644
 board_build.f_cpu = 8000000L
